home: smoother horizontal scrollbar (fixes #7586) (#7590)

--- a/src/app/dashboard/dashboard-tile.scss
+++ b/src/app/dashboard/dashboard-tile.scss
@@ -74,4 +74,14 @@
     }
   }
 
+  ::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: $grey;
+    border-radius: 0;
+    border: 0;
+  }
+
 }
